--- a/cau4.html
+++ b/cau4.html
@@ -21,7 +21,7 @@
             ctx.fillRect(this.x, this.y, this.width, this.height, this.color);
         }
     }
-    let rec = new Rectangle(10,10,200,100,'#000000');
+    let rec = new Rectangle(10,10,200,100,'redgi');
     rec.render()
 </script>
 </body>
